# BlockwiseStatisticalReductions

./: .gitignore  README.md
julia/BlockwiseStatisticalReductions.jl/: AGENTS.md  Manifest.toml  Project.toml  README.md
julia/BlockwiseStatisticalReductions.jl/benchmark/: Project.toml  benchmark_suite.jl  benchmarks.jl
julia/BlockwiseStatisticalReductions.jl/docs/: Project.toml  README.md  make.jl
julia/BlockwiseStatisticalReductions.jl/examples/: Project.toml  README.md  backends.jl  basic_usage.jl  custom_statistic.jl  multiscale_showcase.jl  sliding_windows.jl
julia/BlockwiseStatisticalReductions.jl/ext/: BlockwiseStatisticalReductionsCUDAExt.jl  BlockwiseStatisticalReductionsDistributedExt.jl  BlockwiseStatisticalReductionsKernelAbstractionsExt.jl  BlockwiseStatisticalReductionsOhMyThreadsExt.jl  CUDAExt.jl  JLD2Ext.jl  OhMyThreadsExt.jl
julia/BlockwiseStatisticalReductions.jl/src/: BlockwiseStatisticalReductions.jl  api.jl  backends.jl  buffers.jl  cache.jl  execute.jl  execution.jl  hybrid_mode.jl  lattice.jl  plan.jl  plan_multires.jl  planner.jl  public_api.jl  show.jl  storage.jl  tower.jl  tower_groups.jl  types.jl  windows.jl
julia/BlockwiseStatisticalReductions.jl/test/: Project.toml  runtests.jl  test_accumulators.jl  test_api.jl  test_buffer_pool.jl  test_cache.jl  test_canonical_kernels.jl  test_compiled_execution.jl  test_distributed.jl  test_execute.jl  test_execution.jl  test_hybrid_mode.jl  test_integration.jl  test_kernels.jl  test_merge_kernels.jl  test_multires_plan.jl  (+14 more)
python/: AGENTS.md  README.md  environment.yml  pyproject.toml  validate_install.py
python/src/: __init__.py
python/src/blockwise_statistical_reductions/: __init__.py  _accumulators.py  _numba_kernels.py  backends.py  core.py  dask_integration.py  dask_multires.py  statistics.py  xarray_integration.py
python/tests/: __init__.py  conftest.py  test_accumulators.py  test_core.py  test_dask_integration.py  test_integration.py  test_numba_kernels.py  test_statistics.py  test_xarray_integration.py
(+35 files in other folders)
